crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__petstore_find_pets_by_status.snap
---
source: src/tool_generator.rs
expression: metadata
---
{
  "name": "findPetsByStatus",
  "description": "Finds Pets by status\n\nMultiple status values can be provided with comma separated strings\n\nEndpoint: GET /pet/findByStatus",
  "parameters": {
    "additionalProperties": false,
    "properties": {
      "status": {
        "description": "Status values that need to be considered for filter",
        "items": {
          "enum": [
            "available",
            "pending",
            "sold"
          ],
          "type": "string"
        },
        "type": "array",
        "x-parameter-location": "query",
        "x-parameter-required": true
      },
      "timeout_seconds": {
        "default": 30,
        "description": "Request timeout in seconds",
        "maximum": 300,
        "minimum": 1,
        "type": "integer"
      }
    },
    "required": [
      "status"
    ],
    "type": "object"
  },
  "method": "get",
  "path": "/pet/findByStatus"
}
