crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_with_nested_properties.snap
---
source: src/tool_generator.rs
expression: request_body_schema
---
{
  "additionalProperties": true,
  "description": "User creation data",
  "properties": {
    "age": {
      "maximum": 150,
      "minimum": 0,
      "type": "integer"
    },
    "name": {
      "type": "string"
    }
  },
  "required": [
    "name"
  ],
  "type": "object",
  "x-content-type": "application/json",
  "x-location": "body"
}
