crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_skip_parameter_descriptions.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: schema
---
{
  "type": "string",
  "enum": [
    "available",
    "pending",
    "sold"
  ],
  "examples": [
    "available"
  ]
}
