crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_skip_tool_description.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: metadata
---
{
  "name": "getPetById",
  "title": "Find pet by ID",
  "parameters": {
    "type": "object",
    "properties": {},
    "required": [],
    "additionalProperties": false
  },
  "output_schema": null,
  "method": "get",
  "path": "/pet/{petId}"
}
